--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
 		<hr>
 
 		<ul class="grid">
-			<li class="small"  style="background-image: url(assets/img/vtg.jpg);" ></li>
-			<li class="large" style="background-image: url(assets/img/refridge.jpg);"><a href="https://github.com/Mitali-Ranawat/ReFridge"></a></li>
-			<li class="large" style="background-image: url(assets/img/rfs.png);"></li>
+			<li class="small"  style="background-image: url("assets/img/vtg.jpg");" ></li>
+			<li class="large" style="background-image: url("assets/img/refridge.jpg");"><a href="https://github.com/Mitali-Ranawat/ReFridge"></a></li>
+			<li class="large" style="background-image: url("assets/img/rfs.png");"></li>
 		</ul>	
 		
 		</div>
