--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.6.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="assets/css/styles.css">
 
 
@@ -41,9 +41,9 @@
 		<hr>
 
 		<ul class="grid">
-			<li class="small"  style="background-image: url("assets/img/vtg.jpg");" ></li>
-			<li class="large" style="background-image: url("assets/img/refridge.jpg");"><a href="https://github.com/Mitali-Ranawat/ReFridge"></a></li>
-			<li class="large" style="background-image: url("assets/img/rfs.png");"></li>
+			<li class="small"  style="background-image: url("assets/img/vtg.JPG");" ></li>
+			<li class="large" style="background-image: url("assets/img/refridge.JPG");"><a href="https://github.com/Mitali-Ranawat/ReFridge"></a></li>
+			<li class="large" style="background-image: url("assets/img/rfs.PNG");"></li>
 		</ul>	
 		
 		</div>
